<resources>
    <string name="app_name">InventoryApp-ChrisSharp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login / Register</string>
    <string name="new_user">New User</string>
    <string name="add_item">Add Item</string>
    <string name="exit">Exit</string>
    <string name="item_description">Item Description</string>
    <string name="item_name">Item Name</string>
    <string name="number_of_item_s">Number of Item(s)</string>
    <string name="enter_item_details">Enter Item Details</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="delete">Delete</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="quantity">Quantity:</string>
    <string name="logo">Logo\n</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="edit_item_details">Edit Item Details</string>

</resources>